<resources>
    <string name="app_name">Tune Guesser</string>

    <string name="user">Username</string>
    <string name="password_title">Password</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="todo">todo</string>
    <string name="Motto">Guess that tune</string>
    <string name="password">Password</string>
    <string name="made_by_konnor_jon_matt_yunjae">Made by: Konnor, Jon, Matt, Yunjae</string>
    <string name="email">Email</string>
    <string name="empty"> </string>
    <string name="leaderboard">Leaderboard</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="guess_button">Guess!</string>
    <string name="next_button">Next Song</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="menu">Menu</string>
    <string name="score">score</string>
</resources>