<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/appname3"
        android:layout_width="133dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/Motto"
        android:fontFamily="casual"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo4" />

    <ImageView
        android:id="@+id/logo4"
        android:layout_width="410dp"
        android:layout_height="252dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/screen_shot_2023_03_06_at_5_20_21_pm"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leaderBoardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="Leaderboard"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/pale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playGameMessage" />

    <Button
        android:id="@+id/playGameMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="8dp"
        android:onClick="onPlayGameClick"
        android:text="Play Game"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/pale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname3" />

    <Button
        android:id="@+id/accountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="28dp"
        android:text="Account"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/pale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderBoardButton" />

</androidx.constraintlayout.widget.ConstraintLayout>